fix alignment type entities

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -429,6 +429,9 @@
       }
     }
   }
+  &__type-entities {
+    align-items: flex-end;
+  }
 }
 .c-verify-entity{
 
